--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <img id="logo" src="https://avatars1.githubusercontent.com/u/14159744?s=200&v=4" height="50" width="50"
              alt="nerdschool logo">
-        <h1>Nerdschool h1</h1>
+        <h1>Techschool h1</h1>
         <ul id="menu">
             <li><a href="#">Menu button 1</a></li>
             <li><a href="#">Menu button 2</a></li>
@@ -47,7 +47,7 @@
         </div>
     </main>
     <footer>
-        <p>Copyleft Nerdschool. No rights reserved.</p>
+        <p>Copyleft Techschool. No rights reserved.</p>
     </footer>
 </div>
 </body>
